--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <div class="headline">
         <div class="instaimg1">
             <a href="https://www.instagram.com/what_u_waiting.4/" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\instagram.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/instagram.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg2">
             <a href="https://www.notion.so/f37cd3411e9047e19a8e3ca7a37e3636" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\notion.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/notion.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg3">
             <a href="https://github.com/ChunSounok" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\github.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/github.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
     </div>
@@ -33,7 +33,7 @@
         </p>
     </div>
     <div class="center">
-        <img src="C:\Users\dhkdl\Desktop\aftercss\main.png" style="width:300px; opacity:500%;">
+        <img src="https://github.com/ChunSounok/Holly/blob/main/main.png?raw=true" style="width:300px; opacity:500%;">
     </div>
     <div class="center" style="margin-top:30px; font-size:10t; font-family:'Courier New', Courier, monospace;">
         <div class="inline" id="margin30">
@@ -54,16 +54,16 @@
     </div>
     <div class="center">
         <div class="inline">
-            <img src="C:\Users\dhkdl\Desktop\aftercss\mrch.png" class="mainimg">
+            <img src="https://github.com/ChunSounok/Holly/blob/main/mrch.png?raw=true" class="mainimg">
         </div>
         <div class="inline">
-            <img src="C:\Users\dhkdl\Desktop\aftercss\yudabinband.png" class="mainimg">
+            <img src="https://github.com/ChunSounok/Holly/blob/main/yudabinband.png?raw=true" class="mainimg">
         </div>
         <div class="inline">
-            <img src="C:\Users\dhkdl\Desktop\aftercss\redvelvet.png" class="mainimg">
+            <img src="https://github.com/ChunSounok/Holly/blob/main/redvelvet.png?raw=true" class="mainimg">
         </div>
         <div class="inline">
-            <img src="C:\Users\dhkdl\Desktop\aftercss\younha.png" class="mainimg">
+            <img src="https://github.com/ChunSounok/Holly/blob/main/younha.png?raw=true" class="mainimg">
         </div>
     </div>
     <div>
@@ -76,13 +76,13 @@
     <div class="gridcenter" id="margintop60">
         <div class="gridimg1" style="height:500px; width:1000px; padding:0%; margin:0%;">
             <div class="itemimg1">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\travel.jpg" style="height:500px; width:500px; margin:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/travel.jpg?raw=true" style="height:500px; width:500px; margin:0%;">
             </div>
             <div class="itemimg2" style="height:250px">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\computer.jpg"style="height:250px; width:500px; margin:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/computer.jpg?raw=true"style="height:250px; width:500px; margin:0%;">
             </div>
             <div class="itemimg3" style="height:250px">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\music.jpg"style="height:250px; width:500px; margin:0%">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/music.jpg?raw=true"style="height:250px; width:500px; margin:0%">
             </div>
         </div>
     </div>
@@ -98,7 +98,7 @@
     </div>
     
     <div class="center" id="margintop60">
-        <img src="C:\Users\dhkdl\Desktop\aftercss\suwon.jpg" style="width:1300px; height:600px; opacity:120%;">
+        <img src="https://github.com/ChunSounok/Holly/blob/main/suwon.jpg?raw=true" style="width:1300px; height:600px; opacity:120%;">
     </div>
 
     <div>
@@ -158,17 +158,17 @@
     <div class="endline">
         <div class="instaimg2">
             <a href="https://www.instagram.com/what_u_waiting.4/" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\instagram.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/instagram.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg3">
             <a href="https://www.notion.so/f37cd3411e9047e19a8e3ca7a37e3636" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\notion.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/notion.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg4">
             <a href="https://github.com/ChunSounok" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\github.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/github.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
     </div>
