--- a/game.html
+++ b/game.html
@@ -11,17 +11,17 @@
     <div class="headline">
         <div class="instaimg1">
             <a href="https://www.instagram.com/what_u_waiting.4/" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\instagram.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/instagram.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg2">
             <a href="https://www.notion.so/f37cd3411e9047e19a8e3ca7a37e3636" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\notion.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/notion.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg3">
             <a href="https://github.com/ChunSounok" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\github.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/github.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
     </div>
@@ -75,10 +75,10 @@
                 </div>
 
                 <div class="center" style="margin-bottom:0%; padding-bottom:0%;">
-                    <img src="C:\Users\dhkdl\Desktop\aftercss\leagueimg1.gif" style="width:1100px; height:500px; margin-bottom:0;">  
+                    <img src="https://github.com/ChunSounok/Holly/blob/main/leagueimg1.GIF?raw=true" style="width:1100px; height:500px; margin-bottom:0;">  
                 </div>
                 <div class="center" style="margin-top:0%; padding-top:0%;">
-                    <img src="C:\Users\dhkdl\Desktop\aftercss\leagueimg2.gif" style="width:1100px; height:400px; margin-top:0;">
+                    <img src="https://github.com/ChunSounok/Holly/blob/main/leagueimg2.GIF?raw=true" style="width:1100px; height:400px; margin-top:0;">
                 </div>
 
                 <div>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="center" style="margin-bottom:0%; padding-bottom:0%;">
-                    <img src="C:\Users\dhkdl\Desktop\aftercss\valoimg.gif" style="width:1100px; height:350px; margin-bottom:0;">  
+                    <img src="https://github.com/ChunSounok/Holly/blob/main/valoimg.GIF?raw=true" style="width:1100px; height:350px; margin-bottom:0;">  
                 </div>
 
                 <div>
@@ -174,7 +174,7 @@
                 </div>
 
                 <div class="center" style="margin-bottom:0%; padding-bottom:0%;">
-                    <img src="C:\Users\dhkdl\Desktop\aftercss\fifaimg.gif" style="width:800px; height:500px; margin-bottom:0;">  
+                    <img src="https://github.com/ChunSounok/Holly/blob/main/fifaimg.GIF?raw=true" style="width:800px; height:500px; margin-bottom:0;">  
                 </div>
 
                 <div>
@@ -223,7 +223,7 @@
                 </div>
 
                 <div class="center" style="margin-bottom:0%; padding-bottom:0%;">
-                    <img src="C:\Users\dhkdl\Desktop\aftercss\bubbleimg.gif" style="width:800px; height:500px; margin-bottom:0;">  
+                    <img src="https://github.com/ChunSounok/Holly/blob/main/bubbleimg.GIF?raw=true" style="width:800px; height:500px; margin-bottom:0;">  
                 </div>
 
                 <div>
@@ -273,7 +273,7 @@
                 </div>
 
                 <div class="center" style="margin-bottom:0%; padding-bottom:0%;">
-                    <img src="C:\Users\dhkdl\Desktop\aftercss\overimg.gif" style="width:800px; height:550px; margin-bottom:0;">  
+                    <img src="https://github.com/ChunSounok/Holly/blob/main/overimg.GIF?raw=true" style="width:800px; height:550px; margin-bottom:0;">  
                 </div>
 
                 <div>
@@ -303,17 +303,17 @@
     <div class="endline" style="margin-top:20px; margin-bottom:20px;">
         <div class="instaimg2">
             <a href="https://www.instagram.com/what_u_waiting.4/" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\instagram.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/instagram.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg3">
             <a href="https://www.notion.so/f37cd3411e9047e19a8e3ca7a37e3636" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\notion.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/notion.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
         <div class="instaimg4">
             <a href="https://github.com/ChunSounok" target="_blank" style="margin:0%; padding:0%;">
-                <img src="C:\Users\dhkdl\Desktop\aftercss\github.gif" style="width:30px; height:30px; margin:0%; padding:0%;">
+                <img src="https://github.com/ChunSounok/Holly/blob/main/github.GIF?raw=true" style="width:30px; height:30px; margin:0%; padding:0%;">
             </a>
         </div>
     </div>
