--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="center">
-        <h1 style="font-size:40pt; margin-bottom:0%; margin-top:0%;"><a href="llll.html" style="text-decoration:none; color:black;">What U Waiting For?</a></h1>
+        <h1 style="font-size:40pt; margin-bottom:0%; margin-top:0%;"><a href="index.html" style="text-decoration:none; color:black;">What U Waiting For?</a></h1>
         <p style="font-size:0.83em; font-weight: bolder; letter-spacing:10px;">GAME
         </p>
     </div>
